finished header section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta charset="utf-8">
     <title>Tortoiseshell Optics</title>
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
-    <link href-"./resources/css/style.css" type-"text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type-"text/css" rel="stylesheet">
   </head>
   <body>
+    <header>
+      <div class="banner-image">
+        <div class="nav-bar">
+          <div class="title">
+            <img src="./resources/images/logo-white.png">
+            <span>Tortoiseshell Optics</span>
+          </div>
+          <nav>
+            <a href="#">Services</a>
+            <a href="#">Products</a>
+            <a href="#">Contact</a>
+          </nav>
+        </div>
+        <div class="banner-tagline">
+          <h1>DON'T JUST LOOK, SEE.</h1>
+        </div>
+      </div>
+    </header>
+
+    <div class="main-content">
+      <div class="services">
+        <div class="icon">
+          <img src="./resources/images/paper-icon.png">
+          <span>Comprehensive Exams</span>
+        </div>
+        <div class="icon">
+          <img src="./resources/images/ruler-icon.png">
+          <span>Custom Fittings</span>
+        </div>
+        <div class="icon">
+          <img src="./resources/images/truck-icon.png">
+          <span>Fast Delivery</span>
+        </div>
+      </div>
+    </div>
+
+
+
+
 
   </body>
 </html>
