desktop site finished

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </header>
 
     <div class="main-content">
-      <div class="services">
+      <div class="container services">
         <div class="icon">
-          <img src="./resources/images/paper-icon.png">
+          <img src="./resources/images/paper-icon.png" class="paper-icon">
           <span>Comprehensive Exams</span>
         </div>
         <div class="icon">
@@ -42,6 +42,27 @@
         </div>
       </div>
     </div>
+
+    <div class="container supporting-info">
+      <div class="info">
+        <div class="box-heading">
+          <span>PHILOSOPHY</span>
+        </div>
+        <span class="text-block">Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That's why we offer eye exams, custom fittings, and quick delivery at a low cost. It's your vision that makes ours.</span>
+      </div>
+      <div class="info">
+        <div class="box-heading">
+          <span>APPOINTMENTS</span>
+        </div>
+        <span class="text-block">Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</span>
+      </div>
+    </div>
+
+    <footer class="container">
+      <img src="./resources/images/logo-black.png">
+      <span>Copyright Tortoiseshell Optics</span>
+    </footer>
+
 
 
 
